[tool.black]

[tool.poetry]
name = "ml-with-graphs"
version = "0.1.0"
description = ""
authors = ["Nikita Loik <nikita.loik@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.11.1"
numpy = "^1.25.0"
pandas = "^2.0.0"
networkx = "^3.1.0"
matplotlib = "^3.7.2"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
deepsnap = "^0.2.1"
ogb = "^1.3.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
coverage = "^6.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"